<resources>
    <string name="app_name">ArchitectureDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="i_agree_with_the_terms_and_conditions">I agree with the terms and conditions</string>
    <string name="main_fragment">Main fragment</string>
</resources>